Fixed circuit overflow display

--- a/_sass/_circuits.scss
+++ b/_sass/_circuits.scss
@@ -2,13 +2,16 @@
 .circuit-container {
   position: relative;
   margin: 2rem 0;
-  display: flex;
+  display: block;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100%;
   
   svg {
-    display: block;
-    overflow: hidden;
+    display: inline-block;
+    overflow: auto;
     width: auto;
     height: auto;
     border: 1px solid #eee;
